rest module added

--- a/heroesProjectAPI/pom.xml
+++ b/heroesProjectAPI/pom.xml
@@ -7,6 +7,7 @@
         <module>api</module>
 		<module>core</module>
 		<module>domain</module>
+		<module>rest</module>
 	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
